omweather-weather-com-stations-db (0.9) unstable; urgency=low

  * Fixed problem with new data

 --  Vlad Vasiliev <vlad@gas.by>  Wed, 15 Jul 2009 09:24:20 +0200

omweather-weather-com-stations-db (0.8) unstable; urgency=low

  * Preparing for 0.23 version of OMWeather

 --  Vlad Vasiliev <vlad@gas.by>  Sun, 12 Jul 2009 11:04:20 +0200

omweather-weather-com-stations-db (0.7) unstable; urgency=low

  * Corrected urls
  * Corrected records for Japan
  * Added stations for New Mexico, US

 --  Vlad Vasiliev <vlad@gas.by>  Sun, 12 Jul 2009 11:04:20 +0200

omweather-weather-com-stations-db (0.6) unstable; urgency=low

  * Removed dependency on omweather

 --  Vlad Vasiliev <vlad@gas.by>  Wed, 19 Fri 2009 21:34:20 +0200

omweather-weather-com-stations-db (0.5) unstable; urgency=low

  * Fixed bug #4708 https://bugs.maemo.org/show_bug.cgi?id=4708

 --  Vlad Vasiliev <vlad@gas.by>  Wed, 19 Fri 2009 15:21:20 +0200

omweather-weather-com-stations-db (0.4) unstable; urgency=low

  * Added Provides to deb package

 --  Vlad Vasiliev <vlad@gas.by>  Wed, 17 Jun 2009 15:21:20 +0200

omweather-weather-com-stations-db (0.3) unstable; urgency=low

  * Moved data to sqlite database

 --  Vlad Vasiliev <vlad@gas.by>  Mon, 10 Jun 2009 10:53:20 +0200

omweather-weather-com-stations-db (0.2) unstable; urgency=low

  * Added stations for Republic Of Serbia
  * Added icon to deb package

 --  Vlad Vasiliev <vlad@gas.by>  Mon, 24 Nov 2008 13:53:20 +0200

omweather-weather-com-stations-db (0.1) unstable; urgency=low

  * Initial release.

 --  Vlad Vasiliev <vlad@gas.by>  Wed, 28 May 2008 13:53:20 +0200