@@ -1,8 +1,9 @@
 omweather-weather-com-stations-db (0.9) unstable; urgency=low
 
   * Fixed problem with new data
+  * Added icons to package
 
- --  Vlad Vasiliev <vlad@gas.by>  Wed, 15 Jul 2009 09:24:20 +0200
+ --  Vlad Vasiliev <vlad@gas.by>  Wed, 16 Jul 2009 15:44:20 +0200
 
 omweather-weather-com-stations-db (0.8) unstable; urgency=low
 
